# me433

hw12/: CMakeLists.txt
hw12/pwm_servo/: CMakeLists.txt  pwm_servo.c
hw13.1/: CMakeLists.txt
hw13.1/imu/: CMakeLists.txt  imu.c
hw13.2/: CMakeLists.txt  main.c
hw14/: hw14.py
hw14/sample_code/: python_csv.py  python_fft.py
hw16/: CMakeLists.txt
hw16/motor_controller/: CMakeLists.txt  motor_controller.c
hw2-1/: CMakeLists.txt
hw2-1/blink/: CMakeLists.txt
hw3/: CMakeLists.txt
hw3/blink/: CMakeLists.txt  blink.c
hw4/: CMakeLists.txt  IMG_0051.HEIC  IMG_0052.HEIC
hw4/spi/: CMakeLists.txt  spi.c
hw5/: CMakeLists.txt
hw5/i2c/: CMakeLists.txt  i2c.c
hw6/: CMakeLists.txt
hw6/ssd1306/: CMakeLists.txt  font.h  ssd1306.c
hw7/: CMakeLists.txt
hw7/uart/: CMakeLists.txt  font.h  ssd1306.c  ssd1306.h  uart.c
hw9/: CMakeLists.txt
hw9/zero_to_pico/: CMakeLists.txt  zero_to_pico.c
pico-hw/: CMakeLists.txt
